# etlaqsoler

./: .env.txt  README.md  pyproject.toml  requirements.txt
solar/: forms.py  models.py  urls.py  views.py
solar/migrations/: 0001_initial.py  0002_alter_user_options_and_more.py  0003_installationrequest_region_and_more.py  0004_alter_installationrequest_customer.py
solar/templates/solar/: base_solar.html  create_request.html  request_details.html
user_management/: pyproject.toml  settings.py  urls.py
users/: forms.py  models.py  signals.py  urls.py  views.py
users/templates/users/: base.html  customer_dashboard.html  index.html  login.html  logout.html  profile.html  register.html  technician_dash.html  technician_dashboard.html
