[tool.poetry]
name = "etlaqsoler"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
psycopg2-binary = "^2.9"  # إذا كنت تستخدم PostgreSQL
gunicorn = "^21.2"  # إذا كنت تستخدم Gunicorn

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"